--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>BILIP System</title><style>
+<html><head>
+	<meta name="google-site-verification" content="4SJP-uWYewq_P5CAEvGR-fts4V9G5I7SCp-hBqIOlVA" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>BILIP System</title><style>
 /* cspell:disable-file */
 /* webkit printing magic: print all background colors */
+	
 html {
 	-webkit-print-color-adjust: exact;
 }
